force-app/main/default/objects/Account/fields/AVSFQB__Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Billing_Address__c</fullName>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>