force-app/main/default/objects/Account/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <label>Client Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>