force-app/main/default/objects/Account/fields/Client_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Client_City_State_Zip__c</fullName>
    <label>Client City, State, Zip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>