force-app/main/default/objects/Account/fields/Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Full_Name__c</fullName>
    <label>Client Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>