force-app/main/default/objects/Account/fields/Client_Picture__c.field-meta.xml
<CustomField>
    <fullName>Client_Picture__c</fullName>
    <label>Client Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>