force-app/main/default/objects/Account/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>