force-app/main/default/objects/Account/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <label>Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
            <value>
                <fullName>Group 6</fullName>
            </value>
            <value>
                <fullName>Group 7</fullName>
            </value>
            <value>
                <fullName>Group 8</fullName>
            </value>
            <value>
                <fullName>Group 9</fullName>
            </value>
            <value>
                <fullName>Group 10</fullName>
            </value>
            <value>
                <fullName>(Placeholder Value)</fullName>
                <isActive>false</isActive>
                <label>(Placeholder Value)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>