force-app/main/default/objects/Account/fields/Location_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Location_Tax_Rate__c</fullName>
    <label>Location Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>