force-app/main/default/objects/Account/fields/Membership_Location__c.field-meta.xml
<CustomField>
    <fullName>Membership_Location__c</fullName>
    <label>Membership Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS Winter Park</fullName>
            </value>
            <value>
                <fullName>CMS Ocoee</fullName>
            </value>
            <value>
                <fullName>CMS Oviedo</fullName>
            </value>
            <value>
                <fullName>CMS Lake Mary</fullName>
            </value>
            <value>
                <fullName>CMS Kissimmee</fullName>
            </value>
            <value>
                <fullName>CMS Nashua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>