force-app/main/default/objects/Account/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <description>Growing Young Empower, Growing Young Enhance, Growing Young Enrich, Body Contour</description>
    <label>Membership Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growing Young Empower</fullName>
            </value>
            <value>
                <fullName>Growing Young Enhance</fullName>
            </value>
            <value>
                <fullName>Growing Young Enrich</fullName>
            </value>
            <value>
                <fullName>Body Contour</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Bad Account</fullName>
            </value>
            <value>
                <fullName>Not Allowed on Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>