force-app/main/default/objects/Account/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>