force-app/main/default/objects/Account/fields/Pop_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Notes__c</fullName>
    <label>Pop Up Notes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>