force-app/main/default/objects/Account/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>(Placeholder Value)</fullName>
                <isActive>false</isActive>
                <label>(Placeholder Value)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>