force-app/main/default/objects/Account/fields/Text_Privacy__c.field-meta.xml
<CustomField>
    <fullName>Text_Privacy__c</fullName>
    <label>Text Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Placeholder Value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>