force-app/main/default/objects/Account/recordTypes/Franchisee.recordType-meta.xml
<RecordType>
    <fullName>Franchisee</fullName>
    <active>true</active>
    <description>This is the franchisee that owns the store</description>
    <label>Franchisee</label>
</RecordType>