force-app/main/default/objects/Account/recordTypes/Franchisor.recordType-meta.xml
<RecordType>
    <fullName>Franchisor</fullName>
    <active>true</active>
    <label>Franchisor</label>
</RecordType>