force-app/main/default/objects/Account/validationRules/Must_enter_parent_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_enter_parent_account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK( Parent.Name ),
OR(
   RecordType.Name = &quot;Franchisee&quot;,
   RecordType.Name = &quot;Location&quot;
))</errorConditionFormula>
    <errorMessage>You must enter a parent location since you are creating a location or Franchisee</errorMessage>
</ValidationRule>