force-app/main/default/objects/Account/listViews/Franchisee_Accounts.listView-meta.xml
<ListView>
    <fullName>Franchisee_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Mobile_Number__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Franchisee</value>
    </filters>
    <label>Franchisee Accounts</label>
</ListView>